@@ -1,5 +1,11 @@
 2008-07-22  Mirco Bauer <meebey@meebey.net> 
 
+	* AssemblyInfo.cs, AssemblyInfo.cs.in, Server.mdp, Main.cs, Makefile.am:
+	  Made debug logging an explicit command line parameter (closes trac
+	  bug#60).
+
+2008-07-22  Mirco Bauer <meebey@meebey.net> 
+
 	* Server.cs: Call superseded method of ChannelServices.RegisterChannel().
 
 2008-07-17  Mirco Bauer <meebey@meebey.net> 
